# ai-engine

./: .dockerignore  .gitignore  Dockerfile.recsys  TODO.md  pyproject.toml
.github/workflows/: release-recsys.yml
ai_engine/: .env  config.py  global_searcher.py  index.html  projection_builder.py  user_state.py  vector_searcher.py
ai_engine/static/: index.html
bandit/: README.md  eval.py  replay.py  train.py
docs/: data-and-scoring.md  data-map.md  debt-payload-scatter.md  e2e-eval.md  explainability.md  future-hexagonal.md  inspector.md  recsys-architecture.md  tenancy.md
eval/: README.md  personas.json  run.py
explain/: cluster_train.py  compare_clustering.py  demo.py  replay_events.py
scripts/: e2e_smoke.sh  seed_fake_data.py
src/ai_engine/: common.py  config.py  db_interface.py  events.db  geo_searcher.py  help_searcher.py  index.html  narrative.py  projection_builder.py  service.py  user_searcher.py
src/ai_engine/recsys/: __init__.py  api.py  composition.py  evaluation.py  recommender.py  survey.py  taxonomy.py  tenancy.py  updater.py
src/ai_engine/recsys/adapters/: __init__.py  config_store.py  demographics.py  event_log.py  fastembed_model.py  qdrant_store.py  redis_store.py  rudderstack.py  tenant_store.py
src/ai_engine/recsys/contracts/: __init__.py  config.py  enums.py  models.py  ports.py
src/ai_engine/recsys/explain/: __init__.py  clusters.py  persona.py  verbalize.py
src/ai_engine/recsys/ingest/: __init__.py  contract.py  ingestor.py  sources.py
src/ai_engine/recsys/ranking/: __init__.py  bandit.py  fusion.py  scorers.py
src/ai_engine/recsys/signals/: __init__.py  engagement.py  signal_builder.py
src/ai_engine/recsys/static/: dashboard.html  inspector.html  settings.html
src/ai_engine/recsys/static/favicon/: site.webmanifest
src/ai_engine/recsys/testing/: __init__.py  fakes.py  fixtures.py
src/ai_engine/search/: __init__.py  api.py  geo_searcher.py  global_searcher.py  help_searcher.py  ingest_content.py  qdrant_index.py  user_searcher.py  vector_searcher.py
src/ai_engine/static/: index.html
src/ai_engine/static/css/: app.css
src/ai_engine/static/js/: app.js
src/memorise_taxonomy/: VENDORED.md  __init__.py  taxonomy.py
src/memorise_taxonomy/data/: tags.json
tests/: conftest.py  test_api.py  test_auth.py  test_bandit.py  test_bootstrap.py  test_common.py  test_composition.py  test_config.py  test_distractor.py  test_engagement.py  test_evaluation.py  test_event_log.py  test_explain.py  test_fusion.py  test_geo.py  test_ingest.py  test_recommender.py  test_rudderstack.py  test_scorers.py  test_served_recent.py  test_signal_builder.py  test_survey.py  test_taxonomy.py  test_tenancy.py
tests/integration/: README.md  docker-compose.yml  seed_qdrant.py  test_pipeline_integration.py
