[project]
name = "ai-engine"
version = "0.1.0"
description = "MEMORISE WP5"
authors = [
    {name = "dabadav",email = "dante.avino@alum.esci.upf.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "qdrant-client (>=1.15.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "openai (>=2.8.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "fastembed (>=0.7.3,<0.8.0)",
]
packages = [{ include = "ai_engine", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
