[project]
name = "ai-engine"
version = "0.1.0"
description = "MEMORISE WP5"
authors = [
    {name = "dabadav",email = "dante.avino@alum.esci.upf.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "qdrant-client (>=1.15.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "openai (>=2.8.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "fastembed (>=0.7.3,<0.8.0)",
    "psycopg[binary] (>=3.2.12,<4.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.30.0,<1.0.0)",
    "redis (>=5.0.0,<7.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "pyarrow (>=17.0.0,<22.0.0)",
]

[tool.poetry]
# src-layout package mapping (must live under [tool.poetry]; poetry-core ignores it
# at the top level).
packages = [
    { include = "ai_engine", from = "src" },
    { include = "memorise_taxonomy", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
httpx = ">=0.27.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that need external services (Qdrant/Redis/Postgres)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
